syntax = "proto3";

import "akkaserverless/annotations.proto";
import "google/protobuf/empty.proto";
import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

package io.aggregator.api;

option java_outer_classname = "MinuteApi";

service Minute {
  option (akkaserverless.codegen) = {
    event_sourced_entity: {
      name: "io.aggregator.entity.Minute"
      entity_type: "minute"
      state: "io.aggregator.entity.MinuteState"
      events: [
        "io.aggregator.entity.MinuteCreated",
        "io.aggregator.entity.SecondAdded",
        "io.aggregator.entity.MinuteAggregationRequested",
        "io.aggregator.entity.MinuteAggregated",
        "io.aggregator.entity.ActiveSecondAggregated"  //
      ]
    }
  };

  rpc AddSecond(AddSecondCommand) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/minute/add-second"
      body: "*"
    };
  }

  rpc AggregateMinute(AggregateMinuteCommand) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/minute/aggregate-minute"
      body: "*"
    };
  }

  rpc SecondAggregation(SecondAggregationCommand) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/minute/second-aggregation"
      body: "*"
    };
  }
}

message AddSecondCommand {
  string merchant_id = 1 [(akkaserverless.field).entity_key = true];
  string service_code = 2 [(akkaserverless.field).entity_key = true];
  string account_from = 3 [(akkaserverless.field).entity_key = true];
  string account_to = 4 [(akkaserverless.field).entity_key = true];
  int64 epoch_minute = 5 [(akkaserverless.field).entity_key = true];
  int64 epoch_second = 6;
}

message AggregateMinuteCommand {
  string merchant_id = 1 [(akkaserverless.field).entity_key = true];
  string service_code = 2 [(akkaserverless.field).entity_key = true];
  string account_from = 3 [(akkaserverless.field).entity_key = true];
  string account_to = 4 [(akkaserverless.field).entity_key = true];
  int64 epoch_minute = 5 [(akkaserverless.field).entity_key = true];
  google.protobuf.Timestamp aggregate_request_timestamp = 6;
  string payment_id = 7;
}

message SecondAggregationCommand {
  string merchant_id = 1 [(akkaserverless.field).entity_key = true];
  string service_code = 2 [(akkaserverless.field).entity_key = true];
  string account_from = 3 [(akkaserverless.field).entity_key = true];
  string account_to = 4 [(akkaserverless.field).entity_key = true];
  int64 epoch_minute = 5 [(akkaserverless.field).entity_key = true];
  int64 epoch_second = 6;
  double transaction_total_amount = 7;
  int32 transaction_count = 8;
  google.protobuf.Timestamp last_update_timestamp = 9;
  google.protobuf.Timestamp aggregate_request_timestamp = 10;
  string payment_id = 11;
}
